// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal Form renders properly 1`] = `
<form
  className="form-horizontal"
>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        id="name"
        type="text"
      />
      <span
        className="help-block"
      >
        Enter your name
      </span>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="address"
    >
      Address
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        disabled={true}
        id="address"
        type="address"
      />
      <span
        className="help-block"
      >
        Enter your address
      </span>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="city"
    >
      City
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        disabled={true}
        id="city"
        type="text"
      />
      <span
        className="help-block"
      >
        Enter your city
      </span>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="email"
    >
      Email
    </label>
    <div
      className="col-sm-9"
    >
      <input
        className="form-control"
        disabled={true}
        id="email"
        type="email"
      />
      <span
        className="help-block"
      >
        Enter a valid email address
      </span>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="url"
    >
      My meeting URL
    </label>
    <div
      className="col-sm-9"
    >
      <span
        className="input-group"
      >
        <input
          className="form-control"
          id="url"
          type="url"
        />
        <span
          className="input-group-btn"
        >
          <button
            className="btn btn-default"
            disabled={false}
            type="button"
          >
            Copy URL
          </button>
        </span>
      </span>
      <span
        className="help-block"
      >
        Enter a valid URL
      </span>
    </div>
  </div>
  <div
    className="row"
    style={
      Object {
        "paddingBottom": "10px",
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="col-sm-9 col-sm-offset-3"
    >
      <span>
        <button
          className="btn btn-primary"
          disabled={false}
          type="button"
        >
          Save
        </button>
      </span>
      <span>
        <button
          className="btn btn-default"
          disabled={false}
          type="button"
        >
          Cancel
        </button>
      </span>
    </div>
  </div>
</form>
`;

exports[`Inline Form renders properly 1`] = `
<form
  className="form-inline"
>
  <div
    className="form-group"
    placeholder="Email"
  >
    <input
      className="form-control"
      id="email"
      placeholder="Email"
      type="email"
    />
  </div>
  <div
    className="form-group"
    placeholder="Password"
  >
    <input
      className="form-control"
      id="password"
      placeholder="Password"
      type="password"
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="button"
  >
    Log In
  </button>
</form>
`;

exports[`Input Groups render properly 1`] = `
<form
  className=""
>
  <div
    className="row"
  >
    <div
      className=""
    >
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <span
            className="input-group-addon"
          >
            @
          </span>
          <input
            className="form-control"
            id="control-1"
            type="text"
          />
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <input
            className="form-control"
            id="control-2"
            type="text"
          />
          <span
            className="input-group-addon"
          >
            .00
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <span
            className="input-group-addon"
          >
            $
          </span>
          <input
            className="form-control"
            id="control-3"
            type="text"
          />
          <span
            className="input-group-addon"
          >
            .00
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <input
            className="form-control"
            id="control-4"
            type="text"
          />
          <span
            className="input-group-addon"
          >
            <span
              aria-hidden={true}
              className="fa fa-music"
            />
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <span
            className="input-group-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              type="button"
            >
              Before
            </button>
          </span>
          <input
            className="form-control"
            id="control-5"
            type="text"
          />
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <input
            className="form-control"
            id="control-6"
            type="text"
          />
          <span
            className="dropdown input-group-btn"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="input-dropdown-addon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              Action
               
              <span
                className="caret"
              />
            </button>
            <ul
              aria-labelledby="input-dropdown-addon"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Item
                </a>
              </li>
            </ul>
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <span
            className="input-group-addon"
          >
            <input
              type="radio"
            />
          </span>
          <input
            className="form-control"
            id="control-7"
            type="text"
          />
        </span>
      </div>
      <div
        className="form-group"
      >
        <span
          className="input-group"
        >
          <span
            className="input-group-addon"
          >
            <input
              type="checkbox"
            />
          </span>
          <input
            className="form-control"
            id="control-8"
            type="text"
          />
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`Modal Form renders properly 1`] = `null`;

exports[`Supported controls render properly 1`] = `
<form
  className=""
>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="text"
    >
      Text
    </label>
    <input
      className="form-control"
      id="text"
      type="text"
    />
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="email"
    >
      Email
    </label>
    <input
      className="form-control"
      id="email"
      type="email"
    />
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="form-control"
      id="password"
      type="password"
    />
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="file"
    >
      File
    </label>
    <input
      className=""
      id="file"
      type="file"
    />
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="checkbox"
    >
      Checkbox
    </label>
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          type="checkbox"
        />
        Checkbox
      </label>
    </div>
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="radio"
    >
      Radio
    </label>
    <div
      className="radio"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          type="radio"
        />
        Radio
      </label>
    </div>
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="checkboxGroup"
    >
      Checkbox Group
    </label>
    <div>
      <label
        className="checkbox-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          type="checkbox"
        />
        1
      </label>
      <label
        className="checkbox-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          type="checkbox"
        />
        2
      </label>
      <label
        className="checkbox-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          type="checkbox"
        />
        3
      </label>
    </div>
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="radioGroup"
    >
      Radio Group
    </label>
    <div>
      <label
        className="radio-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          name="radioGroup"
          type="radio"
        />
        1
      </label>
      <label
        className="radio-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          name="radioGroup"
          type="radio"
        />
        2
      </label>
      <label
        className="radio-inline"
        style={undefined}
        title=""
      >
        <input
          disabled={false}
          name="radioGroup"
          type="radio"
        />
        3
      </label>
    </div>
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="textarea"
    >
      Textarea
    </label>
    <textarea
      className="form-control"
      id="textarea"
      type={undefined}
    />
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="static"
    >
      Static
    </label>
    <p
      className="form-control-static"
    >
      email@example.com
    </p>
    <span
      className="help-block"
    >
      Help text
    </span>
  </div>
</form>
`;

exports[`Vertical Form renders properly 1`] = `
<form
  className=""
>
  <div
    className="row"
  >
    <div
      className=""
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="name"
        >
          Name
        </label>
        <input
          className="form-control"
          id="name"
          type="text"
        />
        <span
          className="help-block"
        >
          Enter your name
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="address"
        >
          Address
        </label>
        <input
          className="form-control"
          id="address"
          type="address"
        />
        <span
          className="help-block"
        >
          Enter your address
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="city"
        >
          City
        </label>
        <input
          className="form-control"
          id="city"
          type="text"
        />
        <span
          className="help-block"
        >
          Enter your city
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="email"
        >
          Email
        </label>
        <input
          className="form-control"
          id="email"
          type="email"
        />
        <span
          className="help-block"
        >
          Enter a valid email address
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="url"
        >
          My meeting URL
        </label>
        <span
          className="input-group"
        >
          <input
            className="form-control"
            id="url"
            type="url"
          />
          <span
            className="input-group-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              type="button"
            >
              Copy URL
            </button>
          </span>
        </span>
        <span
          className="help-block"
        >
          Enter a valid URL
        </span>
      </div>
    </div>
  </div>
  <div
    className="row"
    style={
      Object {
        "paddingBottom": "10px",
        "paddingTop": "10px",
      }
    }
  >
    <div
      className=""
    >
      <span>
        <button
          className="btn btn-primary"
          disabled={false}
          type="button"
        >
          Save
        </button>
      </span>
      <span>
        <button
          className="btn btn-default"
          disabled={false}
          type="button"
        >
          Cancel
        </button>
      </span>
    </div>
  </div>
</form>
`;
